fix: shop section on smallest screens

--- a/src/components/shop/shop.scss
+++ b/src/components/shop/shop.scss
@@ -1,25 +1,22 @@
 @import "../../Sass/App.scss";
 
-@include media-breakpoint-down(lg) {
+@include media-breakpoint-down(md) {
   .card {
+    width: 44%;
     min-width: 250px !important;
+    flex-basis: 200px !important;
   }
   .card-group {
     display: flex;
     flex-wrap: wrap;
   }
-  .card-img-top {
-    height: 10em;
-  }
-  .card-img-top {
-    height: 10em;
-  }
 }
 
-@include media-breakpoint-down(xs) {
+@include media-breakpoint-down(sm) {
   .card {
-    width: 44%;
+    width: 40%;
     min-width: 150px !important;
+    flex-basis: 100px !important;
   }
   .card-group {
     display: flex;
@@ -31,18 +28,13 @@
     }
   }
 }
-@include media-breakpoint-up(md) {
+@media (max-width: 333.98px) {
   .card {
-    width: 900px;
+    width: 100%;
+    min-width: 150px !important;
+    flex-basis: 100% !important;
   }
   .card-group {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .card-img-top {
-    height: 10em;
-  }
-  .card-img-top {
-    height: 10em;
+    justify-content: center;
   }
 }
